RESOLVED FIXED 24412
Crash in hit testing with transform-style: preserves-3d but no transforms
https://bugs.webkit.org/show_bug.cgi?id=24412
Summary Crash in hit testing with transform-style: preserves-3d but no transforms
Simon Fraser (smfr)
Reported 2009-03-05 17:04:32 PST
There's a crash in the hit testing code when content uses transform-style: preserve-3d, but has no transforms.
Attachments
Patch, testcase, changelog (5.13 KB, patch)
2009-03-05 17:39 PST, Simon Fraser (smfr)
hyatt: review+
Simon Fraser (smfr)
Comment 1 2009-03-05 17:39:34 PST
Created attachment 28341 [details] Patch, testcase, changelog
Dave Hyatt
Comment 2 2009-03-05 18:30:47 PST
Comment on attachment 28341 [details] Patch, testcase, changelog r=me
Simon Fraser (smfr)
Comment 3 2009-03-05 20:15:38 PST
Note You need to log in before you can comment on or make changes to this bug.